--- a/css/style.css
+++ b/css/style.css
@@ -20,21 +20,27 @@ header { background-color: white; -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0,
 
 header .img-bg { text-align: center; }
 
-.leftbar { position: fixed; left: -400px; height: 100%; width: 400px; background-color: #92253F; z-index: 999; }
+ul { list-style: none; }
+
+.leftbar { transition: 1s; position: fixed; left: -300px; height: 100%; width: 300px; background-color: white; z-index: 999; }
 
 .leftshow { left: 0; }
 
-.rightbar { position: fixed; right: -400px; height: 100%; width: 400px; background-color: #92253F; z-index: 999; }
+.rightbar { transition: 1s; position: fixed; right: -300px; height: 100%; width: 300px; background-color: white; z-index: 999; }
 
 .rightshow { right: 0; }
 
-.leftbar a { display: block; height: 70px; line-height: 70px; text-align: center; border-radius: 0 25px 25px 0; width: 100px; background-color: #FFE35E; position: relative; top: 100px; left: 400px; }
+.leftbar a { font-size: 40px; display: block; height: 70px; line-height: 70px; text-align: center; border-radius: 0 25px 25px 0; width: 60px; background-color: #FFE35E; position: relative; left: 300px; }
 
-.rightbar a { display: block; height: 70px; line-height: 70px; text-align: center; border-radius: 25px 0 0 25px; width: 100px; background-color: #FFE35E; position: relative; top: 100px; right: 100px; }
+.rightbar a { font-size: 40px; display: block; height: 70px; line-height: 70px; text-align: center; border-radius: 25px 0 0 25px; width: 60px; background-color: #FFE35E; position: relative; right: 60px; }
+
+.postsli { font-size: 25px; }
+
+.rightbartext { padding-left: 20px; }
 
 .cardback { background-color: #262626; margin: auto; width: 250px; height: 400px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); border-radius: 20px; }
 
-.card { margin: auto; width: 250px; height: 400px; background-color: black; color: white; font-size: 45px; position: fixed; top: 135px; left: 50%; margin-left: -125px; border-radius: 20px; }
+.card { background: url(../img/logowhite.png) center center; background-repeat: no-repeat; margin: auto; width: 250px; height: 400px; background-color: black; color: white; font-size: 45px; position: fixed; top: 135px; left: 50%; margin-left: -125px; border-radius: 20px; }
 
 .left { position: absolute; top: 20px; left: 30px; }
 
