--- a/css/style.sass
+++ b/css/style.sass
@@ -55,47 +55,55 @@ header
 	line-height: 70px
 header .img-bg
 	text-align: center
+ul
+	list-style: none
 #start
 .leftbar
+	transition: 1s
 	position: fixed
-	left: -400px
+	left: -300px
 	height: 100%
-	width: 400px
-	background-color: #92253F
+	width: 300px
+	background-color: white
 	z-index: 999
 .leftshow
 	left: 0
 .rightbar
+	transition: 1s
 	position: fixed
-	right: -400px
+	right: -300px
 	height: 100%
-	width: 400px
-	background-color: #92253F
+	width: 300px
+	background-color: white
 	z-index: 999
 .rightshow
 	right: 0
 .leftbar a
+	font-size: 40px
 	display: block
 	height: 70px
 	line-height: 70px
 	text-align: center
 	border-radius: 0 25px 25px 0
-	width: 100px
+	width: 60px
 	background-color: #FFE35E
 	position: relative
-	top: 100px
-	left: 400px
+	left: 300px
 .rightbar a
+	font-size: 40px
 	display: block
 	height: 70px
 	line-height: 70px
 	text-align: center
 	border-radius: 25px 0 0 25px
-	width: 100px
+	width: 60px
 	background-color: #FFE35E
-	position: relative
-	top: 100px
-	right: 100px	
+	position: relative	
+	right: 60px	
+.postsli
+	font-size: 25px
+.rightbartext
+	padding-left: 20px
 .cardback
 	background-color: lighten(black,15%)
 	margin: auto
@@ -104,6 +112,8 @@ header .img-bg
 	box-shadow: 0 0 10px rgba(0,0,0,0.5)
 	border-radius: 20px
 .card
+	background: url(../img/logowhite.png) center center
+	background-repeat: no-repeat
 	margin: auto
 	width: 250px
 	height: 400px
