--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,59 @@
-@font-face{font-family:"Raleway" !important;font-style:normal;font-weight:normal;}
-body{font-family:Open sans;font-weight:normal;font-size:14px;min-width:320px;position:relative;line-height:1.6;-webkit-font-smoothing:antialised;overflow-x:hidden;background-color:#e8f1f5;}
-body input:focus:required:invalid, body textarea:focus:required:invalid{color:red;}
-body input:required:valid, body textarea:required:valid{color:green;}
-.hidden{display:none;}
-a{text-decoration:none !important;font-weight:bold;}
-p{font-size:15pt;}
-.loader{background:none repeat scroll 0 0 #ffffff;bottom:0;height:100%;left:0;position:fixed;right:0;top:0;width:100%;z-index:9999;}
-.loader .loader_inner{font-size:50px;height:60px;width:60px;margin-top:-30px;margin-left:-30px;left:50%;top:40%;position:absolute;}
-header{background-color:white;-webkit-box-shadow:0px 1px 1px 0px rgba(0, 0, 102, 0.2);-webkit-box-shadow--moz-box-shadow:0px 1px 1px 0px rgba(0, 0, 102, 0.2);-webkit-box-shadow-box-shadow:0px 1px 1px 0px rgba(0, 0, 102, 0.1);margin-bottom:70px;height:70px;line-height:70px;}
-header .img-bg{text-align:center;}
-ul{list-style:none;}
-.leftbar{transition:1s;position:fixed;left:-300px;height:100%;width:300px;background-color:white;z-index:999;}
-.leftshow{left:0;}
-.rightbar{transition:1s;position:fixed;right:-300px;height:100%;width:300px;background-color:white;z-index:999;}
-.rightshow{right:0;}
-.leftbar a{font-size:40px;display:block;height:70px;line-height:70px;text-align:center;border-radius:0 25px 25px 0;width:60px;background-color:#FFE35E;position:relative;left:300px;}
-.rightbar a{font-size:40px;display:block;height:70px;line-height:70px;text-align:center;border-radius:25px 0 0 25px;width:60px;background-color:#FFE35E;position:relative;right:60px;}
-.postsli{font-size:25px;}
-.rightbartext{padding-left:20px;}
-.cardback{background-color:#262626;margin:auto;width:250px;height:400px;box-shadow:0 0 10px rgba(0, 0, 0, 0.5);border-radius:20px;}
-.card{background:url(../img/logowhite.png) center center;background-repeat:no-repeat;margin:auto;width:250px;height:400px;background-color:black;color:white;font-size:45px;position:fixed;top:135px;left:50%;margin-left:-125px;border-radius:20px;}
-.left{position:absolute;top:20px;left:30px;}
-.right{position:absolute;top:320px;right:35px;}
-.last{z-index:900;}
-.new{z-index:800;}
-.modal-content{overflow:hidden;height:500px;}
-.modal-content button{vertical-align:middle;}
-.modal-content img{margin-top:20px;margin-bottom:20px;}
+@font-face { font-family: "Raleway" !important; font-style: normal; font-weight: normal; }
+
+body { font-family: Open sans; font-weight: normal; font-size: 14px; min-width: 320px; position: relative; line-height: 1.6; -webkit-font-smoothing: antialised; overflow-x: hidden; background-color: #e8f1f5; }
+
+body input:focus:required:invalid, body textarea:focus:required:invalid { color: red; }
+
+body input:required:valid, body textarea:required:valid { color: green; }
+
+.hidden { display: none; }
+
+a { text-decoration: none !important; font-weight: bold; }
+
+p { font-size: 15pt; }
+
+.loader { background: none repeat scroll 0 0 #ffffff; bottom: 0; height: 100%; left: 0; position: fixed; right: 0; top: 0; width: 100%; z-index: 9999; }
+
+.loader .loader_inner { font-size: 50px; height: 60px; width: 60px; margin-top: -30px; margin-left: -30px; left: 50%; top: 40%; position: absolute; }
+
+header { background-color: white; -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 102, 0.2); -webkit-box-shadow--moz-box-shadow: 0px 1px 1px 0px rgba(0, 0, 102, 0.2); -webkit-box-shadow-box-shadow: 0px 1px 1px 0px rgba(0, 0, 102, 0.1); margin-bottom: 70px; height: 70px; line-height: 70px; }
+
+header .img-bg { text-align: center; }
+
+ul { list-style: none; }
+
+.leftbar { transition: 1s; position: fixed; left: -300px; height: 100%; width: 300px; background-color: white; z-index: 999; }
+
+.leftshow { left: 0; }
+
+.rightbar { transition: 1s; position: fixed; right: -300px; height: 100%; width: 300px; background-color: white; z-index: 999; }
+
+.rightshow { right: 0; }
+
+.leftbar a { font-size: 40px; display: block; height: 70px; line-height: 70px; text-align: center; border-radius: 0 25px 25px 0; width: 60px; background-color: #FFE35E; position: relative; left: 300px; }
+
+.rightbar a { font-size: 40px; display: block; height: 70px; line-height: 70px; text-align: center; border-radius: 25px 0 0 25px; width: 60px; background-color: #FFE35E; position: relative; right: 60px; }
+
+.postsli { font-size: 25px; }
+
+.rightbartext { padding-left: 20px; }
+
+.cardback { background-color: #262626; margin: auto; width: 250px; height: 400px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); border-radius: 20px; }
+
+.card { background: url(../img/logowhite.png) center center; background-repeat: no-repeat; margin: auto; width: 250px; height: 400px; background-color: black; color: white; font-size: 45px; position: fixed; top: 135px; left: 50%; margin-left: -125px; border-radius: 20px; }
+
+.left { position: absolute; top: 20px; left: 30px; }
+
+.right { position: absolute; top: 320px; right: 35px; }
+
+.last { z-index: 900; }
+
+.new { z-index: 800; }
+
+.modal-content { overflow: hidden; height: 500px; }
+
+.modal-content button { vertical-align: middle; }
+
+.modal-content img { margin-top: 20px; margin-bottom: 20px; }
+
+h4 { padding-left: 40px; }
