--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,5 @@ ul { list-style: none; }
 .modal-content img { margin-top: 20px; margin-bottom: 20px; }
 
 h4 { padding-left: 40px; }
+
+.twitbox { padding-left: 40px !important; }
